Modify Fault Testing notebook

--- a/notebooks/Fault Testing.ipynb
+++ b/notebooks/Fault Testing.ipynb
@@ -298,7 +298,7 @@
     "\n",
     "\n",
     "# Merge dictionaries that contain sub-dictionaries\n",
-    "def dict_of_dicts_merge(*dicts):\n",
+    "def dict_of_dicts_merge(dicts):\n",
     "    out = {}\n",
     "    for item in dicts:\n",
     "        overlapping_keys = out.keys() & item.keys()\n",
@@ -450,6 +450,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class TargetType:\n",
+    "    @staticmethod\n",
+    "    def any():\n",
+    "        return -1\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def weights():\n",
+    "        return 0\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def thresholds():\n",
+    "        return 1\n",
+    "\n",
+    "\n",
     "class FaultTest:\n",
     "    def __init__(self, classifier_cls, network, dataset, input_file, labels):\n",
     "        self.classifier_cls = classifier_cls\n",
@@ -458,7 +472,7 @@
     "        self.input_file = input_file\n",
     "        self.labels = labels\n",
     "    \n",
-    "    def run_test(self, num_runs, num_flips, flip_word=False, weight_or_threshold=-1, target_layers = []):\n",
+    "    def run_test(self, num_runs, num_flips, flip_word=False, target_type=TargetType.any(), target_layers=[]):\n",
     "        results    = [ None for i in range(num_runs) ]\n",
     "        times      = [ None for i in range(num_runs) ]\n",
     "        accuracies = [ None for i in range(num_runs) ]\n",
@@ -474,11 +488,11 @@
     "            print(message)\n",
     "\n",
     "            if self.dataset == 'cifar10':\n",
-    "                results[i] = classifier.classify_cifars_with_faults(self.input_file, num_flips, flip_word, weight_or_threshold, target_layers).tolist()\n",
+    "                results[i] = classifier.classify_cifars_with_faults(self.input_file, num_flips, flip_word, target_type, target_layers).tolist()\n",
     "            elif self.dataset == 'mnist':\n",
-    "                results[i] = classifier.classify_mnists_with_faults(self.input_file, num_flips, flip_word, weight_or_threshold, target_layers).tolist()\n",
+    "                results[i] = classifier.classify_mnists_with_faults(self.input_file, num_flips, flip_word, target_type, target_layers).tolist()\n",
     "            else:\n",
-    "                results[i] = classifier.classify_images_with_faults(self.input_file, num_flips, flip_word, weight_or_threshold, target_layers).tolist()\n",
+    "                results[i] = classifier.classify_images_with_faults(self.input_file, num_flips, flip_word, target_type, target_layers).tolist()\n",
     "\n",
     "            times[i]      = classifier.usecPerImage\n",
     "            accuracies[i] = calculate_accuracy(results[i], self.labels)\n",
@@ -546,6 +560,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class TestType:\n",
+    "    def __init__(self, target_type, flip_word):\n",
+    "        self.target_type = target_type\n",
+    "        self.flip_word = flip_word\n",
+    "        self.__build_name()\n",
+    "\n",
+    "    def __build_name(self):\n",
+    "        self.name = ''\n",
+    "\n",
+    "        if self.target_type == TargetType.any():\n",
+    "            self.name += 'any'\n",
+    "        elif self.target_type == TargetType.weights():\n",
+    "            self.name += 'weight'\n",
+    "        else:\n",
+    "            self.name += 'thresholds'\n",
+    "\n",
+    "        self.name += ' '\n",
+    "\n",
+    "        if self.flip_word:\n",
+    "            self.name += 'word'\n",
+    "        else:\n",
+    "            self.name += 'bit'\n",
+    "\n",
+    "    @classmethod\n",
+    "    def any_bit(cls):\n",
+    "        return cls(TargetType.any(), False)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def any_word(cls):\n",
+    "        return cls(TargetType.any(), True)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def weight_bit(cls):\n",
+    "        return cls(TargetType.weights(), False)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def weight_word(cls):\n",
+    "        return cls(TargetType.weights(), True)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def threshold_bit(cls):\n",
+    "        return cls(TargetType.thresholds(), False)\n",
+    "\n",
+    "    @classmethod\n",
+    "    def threshold_word(cls):\n",
+    "        return cls(TargetType.thresholds(), True)\n",
+    "\n",
+    "\n",
+    "\n",
     "class NetworkTest:\n",
     "    def __init__(self, fault_test, output_folder):\n",
     "        self.fault_test = fault_test\n",
@@ -589,51 +652,23 @@
     "                out[\"results\"][key][\"avg accuracy\"] = out[\"control\"]\n",
     "        return out\n",
     "\n",
-    "    def __run_tests(self, folder, num_runs, num_flips, bit_flips, word_flips, weights, thresholds, target_layers):\n",
-    "        # Separate output dicts for each run. They will be combined later for the\n",
-    "        # final results, and the redundant data will be discarded.\n",
-    "        weight_bit_output = {}\n",
-    "        threshold_bit_output = {}\n",
-    "        weight_word_output = {}\n",
-    "        threshold_word_output = {}\n",
     "\n",
-    "        if bit_flips:\n",
-    "            if weights: #Test bit flips (weights)\n",
-    "                _, _, accuracies = self.fault_test.run_test(num_runs, num_flips, False, 0, target_layers)\n",
-    "                \n",
-    "                weight_bit_output = self.__build_output_dict(\"weight bit\", num_runs, num_flips, accuracies)\n",
+    "    def __run_tests(self, folder, num_runs, num_flips, test_types, target_layers):\n",
+    "        output_dicts = []\n",
     "\n",
-    "                write_dict_to_file(folder + \"/temp/\" + self.fault_test.network + \"_results_bit_weight.json\", weight_bit_output)\n",
-    "\n",
-    "            if thresholds: #Test bit flips (thresholds)\n",
-    "                _, _, accuracies = self.fault_test.run_test(num_runs, num_flips, False, 1, target_layers)\n",
-    "                \n",
-    "                threshold_bit_output = self.__build_output_dict(\"threshold bit\", num_runs, num_flips, accuracies)\n",
-    "\n",
-    "                write_dict_to_file(folder + \"/temp/\" + self.fault_test.network + \"_results_bit_threshold.json\", threshold_bit_output)\n",
-    "\n",
-    "        if word_flips:\n",
-    "            if weights: #Test word flips (weights)\n",
-    "                _, _, accuracies = self.fault_test.run_test(num_runs, num_flips, True, 0, target_layers)\n",
-    "                \n",
-    "                weight_word_output = self.__build_output_dict(\"weight word\", num_runs, num_flips, accuracies)\n",
-    "\n",
-    "                write_dict_to_file(folder + \"/temp/\" + self.fault_test.network + \"_results_word_weight.json\", weight_word_output)\n",
-    "            \n",
-    "            if thresholds: #Test word flips (thresholds)\n",
-    "                _, _, accuracies = self.fault_test.run_test(num_runs, num_flips, True, 1, target_layers)\n",
-    "                \n",
-    "                threshold_word_output = self.__build_output_dict(\"threshold word\", num_runs, num_flips, accuracies)\n",
-    "\n",
-    "                write_dict_to_file(folder + \"/temp/\" + self.fault_test.network + \"_results_word_threshold.json\", threshold_word_output)\n",
+    "        for test in test_types:\n",
+    "            _, _, accuracies = self.fault_test.run_test(num_runs, num_flips, test.flip_word, test.target_type, target_layers)\n",
+    "            output = self.__build_output_dict(test.name, num_runs, num_flips, accuracies)\n",
+    "            output_dicts.append(output)\n",
+    "            write_dict_to_file(folder + '/temp/' + self.fault_test.network + '_results' + test.name + '.json', output)\n",
     "\n",
     "        # Calculate stats\n",
-    "        stats = dict_of_dicts_merge(weight_bit_output, threshold_bit_output, weight_word_output, threshold_word_output)\n",
+    "        stats = dict_of_dicts_merge(output_dicts)\n",
     "        stats = self.__calculate_stats(stats)\n",
     "        return stats\n",
     "\n",
-    "\n",
-    "    def test_network(self, num_runs, num_flips, bit_flips=True, word_flips=True, weights=True, thresholds=True, target_layers = []):\n",
+    "        \n",
+    "    def test_network(self, num_runs, num_flips, test_types, target_layers=[]):\n",
     "        folder = self.output_folder + '/' + str(num_flips) + 'flips/'\n",
     "\n",
     "        # Calculate the control accuracy\n",
@@ -641,7 +676,7 @@
     "            self.__run_control()\n",
     "\n",
     "        # Run all tests\n",
-    "        stats = self.__run_tests(folder, num_runs, num_flips, bit_flips, word_flips, weights, thresholds, target_layers)\n",
+    "        stats = self.__run_tests(folder, num_runs, num_flips, test_types, target_layers)\n",
     "\n",
     "        # Write all stats to the output file\n",
     "        filename = folder + '/' + self.fault_test.network + '_' + self.fault_test.dataset\n",
@@ -650,7 +685,17 @@
     "        else:\n",
     "            filename = filename + \"_stats.json\"\n",
     "\n",
-    "        write_dict_to_file(filename, stats)"
+    "        write_dict_to_file(filename, stats)\n",
+    "\n",
+    "\n",
+    "    def comprehensive_test(self, num_runs, num_flips, target_layers=[]):\n",
+    "        test_types = [\n",
+    "            TestType.any_bit(), TestType.any_word(),\n",
+    "            TestType.weight_bit(), TestType.weight_word(),\n",
+    "            TestType.threshold_bit(), TestType.threshold_word()\n",
+    "        ]\n",
+    "\n",
+    "        self.test_network(num_runs, num_flips, test_Types, target_layers)"
    ]
   },
   {
@@ -671,10 +716,10 @@
    "source": [
     "output_folder = \"/home/xilinx/jupyter_notebooks/bnn/faults/\"\n",
     "\n",
-    "num_runs = 40\n",
+    "num_runs = 100\n",
     "flip_counts = [5, 10, 50, 100]\n",
     "\n",
-    "tests = {\n",
+    "cnv_tests = {\n",
     "    # cnvW1A1 Networks\n",
     "    'cnvW1A1': [\n",
     "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1, cifar_files, cifar_labels), output_folder),\n",
@@ -688,7 +733,7 @@
     "    ],\n",
     "    'cnvW1A1-interleaved': [\n",
     "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, cifar_files, cifar_labels), output_folder),\n",
-    "#        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, svhn_files, svhn_labels), output_folder),\n",
+    "        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, svhn_files, svhn_labels), output_folder),\n",
     "        NetworkTest(CNVFaultTest.GTSRBTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, gtsrb_files, gtsrb_labels), output_folder),\n",
     "    ],\n",
     "\n",
@@ -696,9 +741,9 @@
     "    'cnvW1A2': [\n",
     "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A2, cifar_files, cifar_labels), output_folder)\n",
     "    ],\n",
-    "#    'cnvW1A2-TMR': [\n",
+    "    'cnvW1A2-TMR': [\n",
     "#        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A2_TMR, cifar_files, cifar_labels), output_folder)\n",
-    "#    ],\n",
+    "    ],\n",
     "    'cnvW1A2-interleaved': [\n",
     "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A2_INTERLEAVED, cifar_files, cifar_labels), output_folder)\n",
     "    ],\n",
@@ -723,19 +768,16 @@
    "outputs": [],
    "source": [
     "# Run all tests\n",
-    "for layer in range(9):\n",
-    "    for flips in flip_counts:\n",
-    "        for key, test_array in tests.items():\n",
-    "            for test in test_array:\n",
-    "                test.test_network(num_runs, flips, bit_flips=True, word_flips=True, weights=True, thresholds=True, target_layers=[layer])\n"
+    "\n",
+    "only_weights = [TestType.weight_bit(), TestType.weight_word()]\n",
+    "all_tests = [test for lst in cnv_tests.values() for test in lst]\n",
+    "\n",
+    "for test in all_tests:\n",
+    "    for layer in range(8):\n",
+    "        for flips in flip_counts:\n",
+    "            test.comprehensive_test(num_runs=num_runs, num_flips=flips, target_layers=[layer])\n",
+    "    test.test_network(num_runs=num_runs, num_flips=flips, test_types=only_weights, target_layers=[8])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
