--- a/notebooks/Fault Testing.ipynb
+++ b/notebooks/Fault Testing.ipynb
@@ -298,7 +298,7 @@
     "\n",
     "\n",
     "# Merge dictionaries that contain sub-dictionaries\n",
-    "def dict_of_dicts_merge(dicts):\n",
+    "def dict_of_dicts_merge(*dicts):\n",
     "    out = {}\n",
     "    for item in dicts:\n",
     "        overlapping_keys = out.keys() & item.keys()\n",
@@ -663,7 +663,7 @@
     "            write_dict_to_file(folder + '/temp/' + self.fault_test.network + '_results' + test.name + '.json', output)\n",
     "\n",
     "        # Calculate stats\n",
-    "        stats = dict_of_dicts_merge(output_dicts)\n",
+    "        stats = dict_of_dicts_merge(*output_dicts)\n",
     "        stats = self.__calculate_stats(stats)\n",
     "        return stats\n",
     "\n",
