--- a/notebooks/Fault Testing.ipynb
+++ b/notebooks/Fault Testing.ipynb
@@ -574,7 +574,7 @@
     "        elif self.target_type == TargetType.weights():\n",
     "            self.name += 'weight'\n",
     "        else:\n",
-    "            self.name += 'thresholds'\n",
+    "            self.name += 'threshold'\n",
     "\n",
     "        self.name += ' '\n",
     "\n",
