--- a/notebooks/Fault Testing.ipynb
+++ b/notebooks/Fault Testing.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Fault Injection on Quantized Neural Networks\n",
     "\n",
-    "This notebook tests fault injection on quantized neural networks modified to mitigate the impact of faults. It is recommended to first read through and understand some of the example notebooks that demonstrate image classification with BNN-PYNQ."
+    "This notebook tests fault injection on quantized neural networks (QNNs). It is recommended to first read through and understand some of the example notebooks that demonstrate image classification with BNN-PYNQ."
    ]
   },
   {
@@ -18,27 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "require(['notebook/js/codecell'], function(codecell) {\n",
-       "  codecell.CodeCell.options_default.highlight_modes[\n",
-       "      'magic_text/x-csrc'] = {'reg':[/^%%microblaze/]};\n",
-       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
-       "      Jupyter.notebook.get_cells().map(function(cell){\n",
-       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
-       "  });\n",
-       "});\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import bnn\n",
     "import os\n",
@@ -257,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,28 +322,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Availabe params: ['cifar10', 'road-signs', 'streetview']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/dist-packages/pynq/overlay.py:299: UserWarning: Users will not get PARAMETERS / REGISTERS information through TCL files. HWH file is recommended.\n",
-      "  warnings.warn(message, UserWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Availabe params: ['cifar10', 'road-signs', 'streetview']\n",
       "Classifying 1000 images with cnvW1A1-cifar10\n"
      ]
     },
@@ -379,7 +347,7 @@
      "text": [
       "Inference took 1582000.00 microseconds, 1582.00 usec per image\n",
       "Classification rate: 632.11 images per second\n",
-      "Accuracy: 66.3\n"
+      "Accuracy: 62.5\n"
      ]
     }
    ],
@@ -436,17 +404,18 @@
     "- **num_runs:** The number of tests to perform\n",
     "- **num_flips:** The number of faults to inject per run\n",
     "- **flip_word:** A boolean indicating if a bit or word should be flipped\n",
-    "- **weight_or_threshold:** An integer specifying if weights, thresholds, or both should be targeted.\n",
+    "- **weight_or_threshold:** An integer specifying if weights, thresholds, or both should be targeted. Obtain these values using the static methods in the TargetType class for clarity.\n",
     "\n",
     "        -1 = target weights and thresholds\n",
     "        0  = target weights only\n",
     "        1  = target thresholds only\n",
+    "\n",
     "- **target_layers:** An array of integers specifying which layers to target. Leave empty to target all layers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,11 +449,16 @@
     "        for i in range(num_runs):\n",
     "            classifier = self.classifier_cls(self.network, self.dataset, bnn.RUNTIME_HW)\n",
     "\n",
-    "            message = \"{}-{} run {} of {}\".format(self.network, self.dataset, i+1, num_runs)\n",
-    "            if len(target_layers) == 0:\n",
-    "                message += \" (flipping {} {}(s) in any layer)\".format(num_flips, \"word\" if flip_word else \"bit\")\n",
-    "            else:\n",
-    "                message += \" (flipping {} {}(s) in layer(s) {})\".format(num_flips, \"word\" if flip_word else \"bit\", target_layers)\n",
+    "            message = \"{}-{} run {} of {} (flipping {}{} {}(s) in {})\".format(\n",
+    "                self.network,\n",
+    "                self.dataset,\n",
+    "                i+1,\n",
+    "                num_runs,\n",
+    "                num_flips,\n",
+    "                ' weight' if target_type == 0 else ' threshold' if target_type == 1 else '',\n",
+    "                'word' if flip_word else 'bit',\n",
+    "                'any layer' if len(target_layers) == 0 else 'layer(s) {}'.format(target_layers)\n",
+    "            )\n",
     "            print(message)\n",
     "\n",
     "            if self.dataset == 'cifar10':\n",
@@ -542,21 +516,18 @@
     "\n",
     "**Constructor Arguments:**\n",
     "- **fault_test:** A FaultTest (or derived class) object\n",
-    "- **output_folder:** The folder to store the test results in\n",
+    "- **output_folder:** The folder to store the test results in. Results will be stored in subfolders organized by network and dataset.\n",
     "\n",
     "**NetworkTest.test_network() Arguments:**\n",
-    "- **num_runs:** The number of times to run each test\n",
-    "- **num_flips:** The number of faults to inject each run\n",
-    "- **bit_flips:** Whether or not to run bit flip tests\n",
-    "- **word_flips:** Whether or not to run word flip tests\n",
-    "- **weights:** Whether or not to run tests targeting weights\n",
-    "- **thresholds:** Whether or not to run tests targeting thresholds\n",
+    "- **num_runs:** The number of runs in each test\n",
+    "- **flip_counts:** A list of fault counts to inject each run. One test will be run for each.\n",
+    "- **test_types:** A list of TestType objects which specify the location and type of fault for each test.\n",
     "- **target_layers:** An array of integers specifying which layers to target. Leave empty to target all layers."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +545,7 @@
     "        elif self.target_type == TargetType.weights():\n",
     "            self.name += 'weight'\n",
     "        else:\n",
-    "            self.name += 'threshold'\n",
+    "            self.name += 'thresholds'\n",
     "\n",
     "        self.name += ' '\n",
     "\n",
@@ -613,7 +584,7 @@
     "    def __init__(self, fault_test, output_folder):\n",
     "        self.fault_test = fault_test\n",
     "        self.output_folder = output_folder + '/' + self.fault_test.network + '/' + self.fault_test.dataset + '/'\n",
-    "        self.control = -1\n",
+    "        self.control = None\n",
     "\n",
     "    def __run_control(self):\n",
     "        print(\"Running\", self.fault_test.network + \"-\" + self.fault_test.dataset, \"control test\")\n",
@@ -668,34 +639,36 @@
     "        return stats\n",
     "\n",
     "        \n",
-    "    def test_network(self, num_runs, num_flips, test_types, target_layers=[]):\n",
-    "        folder = self.output_folder + '/' + str(num_flips) + 'flips/'\n",
-    "\n",
+    "    def test_network(self, num_runs, flip_counts, test_types, target_layers=[]):\n",
     "        # Calculate the control accuracy\n",
-    "        if self.control < 0:\n",
+    "        if self.control is None:\n",
     "            self.__run_control()\n",
     "\n",
-    "        # Run all tests\n",
-    "        stats = self.__run_tests(folder, num_runs, num_flips, test_types, target_layers)\n",
+    "        for num_flips in flip_counts:\n",
+    "            folder = self.output_folder + '/' + str(num_flips) + 'flips/'\n",
     "\n",
-    "        # Write all stats to the output file\n",
-    "        filename = folder + '/' + self.fault_test.network + '_' + self.fault_test.dataset\n",
-    "        if len(target_layers) > 0:\n",
-    "            filename = filename + \"_stats_layer{}.json\".format(target_layers)\n",
-    "        else:\n",
-    "            filename = filename + \"_stats.json\"\n",
+    "            # Run all tests for this flip count\n",
+    "            stats = self.__run_tests(folder, num_runs, num_flips, test_types, target_layers)\n",
     "\n",
-    "        write_dict_to_file(filename, stats)\n",
+    "            # Build file name\n",
+    "            filename = folder + '/' + self.fault_test.network + '_' + self.fault_test.dataset\n",
+    "            if len(target_layers) > 0:\n",
+    "                filename = filename + \"_stats_layer{}.json\".format(target_layers)\n",
+    "            else:\n",
+    "                filename = filename + \"_stats.json\"\n",
+    "\n",
+    "            # Write results to the output file\n",
+    "            write_dict_to_file(filename, stats)\n",
     "\n",
     "\n",
-    "    def comprehensive_test(self, num_runs, num_flips, target_layers=[]):\n",
+    "    def comprehensive_test(self, num_runs, flip_counts, target_layers=[]):\n",
     "        test_types = [\n",
     "            TestType.any_bit(), TestType.any_word(),\n",
     "            TestType.weight_bit(), TestType.weight_word(),\n",
     "            TestType.threshold_bit(), TestType.threshold_word()\n",
     "        ]\n",
     "\n",
-    "        self.test_network(num_runs, num_flips, test_Types, target_layers)"
+    "        self.test_network(num_runs, flip_counts, test_types, target_layers)"
    ]
   },
   {
@@ -767,16 +740,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run all tests\n",
-    "\n",
     "only_weights = [TestType.weight_bit(), TestType.weight_word()]\n",
-    "all_tests = [test for lst in cnv_tests.values() for test in lst]\n",
     "\n",
-    "for test in all_tests:\n",
+    "all_tests_flat = [test for lst in cnv_tests.values() for test in lst]\n",
+    "\n",
+    "for test in all_tests_flat:\n",
     "    for layer in range(8):\n",
-    "        for flips in flip_counts:\n",
-    "            test.comprehensive_test(num_runs=num_runs, num_flips=flips, target_layers=[layer])\n",
-    "    test.test_network(num_runs=num_runs, num_flips=flips, test_types=only_weights, target_layers=[8])"
+    "        test.comprehensive_test(num_runs, flip_counts, target_layers=[layer])\n",
+    "    test.test_network(num_runs, flip_counts, test_types=only_weights, target_layers=[8])"
    ]
   }
  ],
