--- a/notebooks/Fault Testing.ipynb
+++ b/notebooks/Fault Testing.ipynb
@@ -18,9 +18,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "require(['notebook/js/codecell'], function(codecell) {\n",
+       "  codecell.CodeCell.options_default.highlight_modes[\n",
+       "      'magic_text/x-csrc'] = {'reg':[/^%%microblaze/]};\n",
+       "  Jupyter.notebook.events.one('kernel_ready.Kernel', function(){\n",
+       "      Jupyter.notebook.get_cells().map(function(cell){\n",
+       "          if (cell.cell_type == 'code'){ cell.auto_highlight(); } }) ;\n",
+       "  });\n",
+       "});\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import bnn\n",
     "import os\n",
@@ -197,9 +215,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2020-02-25 11:45:11--  http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Resolving yann.lecun.com (yann.lecun.com)... failed: Temporary failure in name resolution.\n",
+      "wget: unable to resolve host address ‘yann.lecun.com’\n",
+      "--2020-02-25 11:45:12--  http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Resolving yann.lecun.com (yann.lecun.com)... failed: Temporary failure in name resolution.\n",
+      "wget: unable to resolve host address ‘yann.lecun.com’\n"
+     ]
+    }
+   ],
    "source": [
     "def load_mnist_testset(folder, num_images=10000):\n",
     "    num_images = min(num_images, 10000)\n",
@@ -329,7 +360,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Availabe params: ['cifar10', 'road-signs', 'streetview']\n",
+      "Availabe params: ['cifar10', 'road-signs', 'streetview']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/dist-packages/pynq/overlay.py:299: UserWarning: Users will not get PARAMETERS / REGISTERS information through TCL files. HWH file is recommended.\n",
+      "  warnings.warn(message, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Classifying 1000 images with cnvW1A1-cifar10\n"
      ]
     },
@@ -347,7 +392,7 @@
      "text": [
       "Inference took 1582000.00 microseconds, 1582.00 usec per image\n",
       "Classification rate: 632.11 images per second\n",
-      "Accuracy: 62.5\n"
+      "Accuracy: 61.8\n"
      ]
     }
    ],
@@ -527,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +590,7 @@
     "        elif self.target_type == TargetType.weights():\n",
     "            self.name += 'weight'\n",
     "        else:\n",
-    "            self.name += 'thresholds'\n",
+    "            self.name += 'threshold'\n",
     "\n",
     "        self.name += ' '\n",
     "\n",
@@ -592,13 +637,14 @@
     "        self.control = accuracy[0]\n",
     "\n",
     "    # Output dict contains the combined raw results from a test. Used as input to calculate_stats\n",
-    "    def __build_output_dict(self, name, num_runs, num_flips, accuracies):\n",
+    "    def __build_output_dict(self, name, num_runs, num_flips, layers, accuracies):\n",
     "        out = {}\n",
     "        out[\"network\"] = self.fault_test.network\n",
     "        out[\"dataset\"] = self.fault_test.dataset\n",
     "        out[\"run count\"] = num_runs\n",
     "        out[\"flips\"] = num_flips\n",
     "        out[\"control\"] = self.control\n",
+    "        out[\"layers\"] = layers\n",
     "        out[\"results\"] = {}\n",
     "        out[\"results\"][name] = accuracies\n",
     "        return out\n",
@@ -629,7 +675,7 @@
     "\n",
     "        for test in test_types:\n",
     "            _, _, accuracies = self.fault_test.run_test(num_runs, num_flips, test.flip_word, test.target_type, target_layers)\n",
-    "            output = self.__build_output_dict(test.name, num_runs, num_flips, accuracies)\n",
+    "            output = self.__build_output_dict(test.name, num_runs, num_flips, target_layers, accuracies)\n",
     "            output_dicts.append(output)\n",
     "            write_dict_to_file(folder + '/temp/' + self.fault_test.network + '_results' + test.name + '.json', output)\n",
     "\n",
@@ -689,30 +735,30 @@
    "source": [
     "output_folder = \"/home/xilinx/jupyter_notebooks/bnn/faults/\"\n",
     "\n",
-    "num_runs = 100\n",
+    "num_runs = 50\n",
     "flip_counts = [5, 10, 50, 100]\n",
     "\n",
     "cnv_tests = {\n",
     "    # cnvW1A1 Networks\n",
     "    'cnvW1A1': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1, cifar_files, cifar_labels), output_folder),\n",
-    "        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1, svhn_files, svhn_labels), output_folder),\n",
-    "        NetworkTest(CNVFaultTest.GTSRBTest(bnn.NETWORK_CNVW1A1, gtsrb_files, gtsrb_labels), output_folder),\n",
+    "#        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1, cifar_files, cifar_labels), output_folder),\n",
+    "#        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1, svhn_files, svhn_labels), output_folder),\n",
+    "#        NetworkTest(CNVFaultTest.GTSRBTest(bnn.NETWORK_CNVW1A1, gtsrb_files, gtsrb_labels), output_folder),\n",
     "    ],\n",
     "    'cnvW1A1-TMR': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1_TMR, cifar_files, cifar_labels), output_folder),\n",
-    "        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1_TMR, svhn_files, svhn_labels), output_folder),\n",
-    "        NetworkTest(CNVFaultTest.GTSRBTest(bnn.NETWORK_CNVW1A1_TMR, gtsrb_files, gtsrb_labels), output_folder),\n",
+    "#        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1_TMR, cifar_files, cifar_labels), output_folder),\n",
+    "#        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1_TMR, svhn_files, svhn_labels), output_folder),\n",
+    "#        NetworkTest(CNVFaultTest.GTSRBTest(bnn.NETWORK_CNVW1A1_TMR, gtsrb_files, gtsrb_labels), output_folder),\n",
     "    ],\n",
     "    'cnvW1A1-interleaved': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, cifar_files, cifar_labels), output_folder),\n",
-    "        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, svhn_files, svhn_labels), output_folder),\n",
-    "        NetworkTest(CNVFaultTest.GTSRBTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, gtsrb_files, gtsrb_labels), output_folder),\n",
+    "#        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, cifar_files, cifar_labels), output_folder),\n",
+    "#        NetworkTest(CNVFaultTest.SVHNTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, svhn_files, svhn_labels), output_folder),\n",
+    "#        NetworkTest(CNVFaultTest.GTSRBTest(bnn.NETWORK_CNVW1A1_INTERLEAVED, gtsrb_files, gtsrb_labels), output_folder),\n",
     "    ],\n",
     "\n",
     "    # cnvW1A2 Networks\n",
     "    'cnvW1A2': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A2, cifar_files, cifar_labels), output_folder)\n",
+    "#        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A2, cifar_files, cifar_labels), output_folder)\n",
     "    ],\n",
     "    'cnvW1A2-TMR': [\n",
     "#        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW1A2_TMR, cifar_files, cifar_labels), output_folder)\n",
@@ -723,10 +769,10 @@
     "\n",
     "    # cnvW2A2 Networks\n",
     "    'cnvW2A2': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW2A2, cifar_files, cifar_labels), output_folder)\n",
+    "#        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW2A2, cifar_files, cifar_labels), output_folder)\n",
     "    ],\n",
     "    'cnvW2A2-TMR': [\n",
-    "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW2A2_TMR, cifar_files, cifar_labels), output_folder)\n",
+    "#        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW2A2_TMR, cifar_files, cifar_labels), output_folder)\n",
     "    ],\n",
     "    'cnvW2A2-interleaved': [\n",
     "        NetworkTest(CNVFaultTest.CIFARTest(bnn.NETWORK_CNVW2A2_INTERLEAVED, cifar_files, cifar_labels), output_folder)\n",
@@ -740,14 +786,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "all_types = [TestType.weight_bit(), TestType.weight_word(), TestType.threshold_bit(), TestType.threshold_word()]\n",
     "only_weights = [TestType.weight_bit(), TestType.weight_word()]\n",
     "\n",
     "all_tests_flat = [test for lst in cnv_tests.values() for test in lst]\n",
     "\n",
     "for test in all_tests_flat:\n",
-    "    for layer in range(8):\n",
-    "        test.comprehensive_test(num_runs, flip_counts, target_layers=[layer])\n",
-    "    test.test_network(num_runs, flip_counts, test_types=only_weights, target_layers=[8])"
+    "    test.test_network(num_runs, flip_counts, test_types=all_types, target_layers=[])"
    ]
   }
  ],
