--- a/notebooks/Fault Testing.ipynb
+++ b/notebooks/Fault Testing.ipynb
@@ -677,7 +677,7 @@
     "            _, _, accuracies = self.fault_test.run_test(num_runs, num_flips, test.flip_word, test.target_type, target_layers)\n",
     "            output = self.__build_output_dict(test.name, num_runs, num_flips, target_layers, accuracies)\n",
     "            output_dicts.append(output)\n",
-    "            write_dict_to_file(folder + '/temp/' + self.fault_test.network + '_results' + test.name + '.json', output)\n",
+    "            write_dict_to_file(folder + '/temp/' + self.fault_test.network + '_results_' + test.name.replace(' ', '-') + '.json', output)\n",
     "\n",
     "        # Calculate stats\n",
     "        stats = dict_of_dicts_merge(*output_dicts)\n",
